--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
