--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.0",
