Refactor backend and frontend code, add authentication and authorization functionality 17.3

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,1 +1,3 @@
 MONGO_URI = mongodb+srv://ludeesha:Work2000@cluster0.49yigan.mongodb.net/foodStore?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET = 'secretkey'
