--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
@@ -29,6 +30,7 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/leaflet": "^1.9.11",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
