--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "ngx-toastr": "^18.0.0",
+    "react-router-dom": "^6.23.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
