--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -43,7 +43,15 @@
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "runtime.js",
+                "input": "src/assets/",
+                "output": "/"
+              }
+            ],
             "styles": [
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css",
