--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node": "18.16.0"
+  },
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
