Refactor map component and authentication controller; remove unused tap method and streamline response handling

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -45,12 +45,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "runtime.js",
-                "input": "src/assets/",
-                "output": "/"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
