--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd src && nodemon server.ts",
+    "build": "tsc",
+    "start": "node built/server.js",
+    "dev": "cd src && nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
